added mongoose and using scraper instead of Scrap

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   , "dependencies": {
       "express": "2.5.8"
     , "jade": ">= 0.0.1"
-    , "Scrap": ">= 1.0.0"
+    , "scraper": ">= 0.0.9"
     , "jquery": "1.6.3"
+    , "mongoose": ""
   }
 }
