--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-    "name": "application-name"
+  "name": "application-name"
   , "version": "0.0.1"
-  , "private": true
+  , "private": true,
+  "engines": {
+    "node": "0.6.x",
+    "npm":  "1.1.x"
+  }
   , "dependencies": {
-      "express": "2.5.8"
+    "express": "2.5.8"
     , "jade": ">= 0.0.1"
     , "scraper": ">= 0.0.9"
     , "jquery": "1.6.3"
