updated app name on package.json

--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "application-name"
+    "name": "reactive-scraper"
   , "version": "0.0.1"
-  , "private": true,
-  "engines": {
-    "node": "0.6.x",
-    "npm":  "1.1.x"
-  }
+  , "private": true
+  , "engines": {
+        "node": "0.6.x"
+      , "npm":  "1.1.x"
+    }
   , "dependencies": {
-    "express": "2.5.8"
-    , "jade": ">= 0.0.1"
-    , "scraper": ">= 0.0.9"
-    , "jquery": "1.6.3"
-    , "mongoose": ""
-    , "socket.io": ""
+        "express": "2.5.8"
+      , "jade": ">= 0.0.1"
+      , "scraper": ">= 0.0.9"
+      , "jquery": "1.6.3"
+      , "mongoose": ""
+      , "socket.io": ""
   }
 }
